--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ members of committees must be members of the RISC-V Foundation.</li>
 <li>All details of the foundation are a work in progress. Feedback is welcome!</li>
 <li>16 member companies so far. Bluespec, Draper, Google, Hewlett Packard Labs,
 Microsemi, Oracle, SiFive, antmicro, codasip, Gray Research, Lattice
-Semiconductor, ROA logic, Rumble Development, Syntacore, Technolution</li>
+Semiconductor, lowRISC, ROA logic, Rumble Development, Syntacore, Technolution</li>
 </ul>
 
 <h2 id="risc-v-updates-krste-asanovic:404bdd89395af7de00a88d5e9af98f5d">RISC-V Updates: Krste Asanovic</h2>
@@ -317,6 +317,19 @@ binary.</li>
 <li>Don&rsquo;t cheap out on SPI or flash part size. Just plan a 64MiB part.</li>
 <li>Don&rsquo;t reset the chipset on IE device not present.</li>
 </ul></li>
+</ul>
+
+<h2 id="risc-v-and-uefi-dong-wei-and-abner-chang:404bdd89395af7de00a88d5e9af98f5d">RISC-V and UEFI: Dong Wei and Abner Chang</h2>
+
+<ul>
+<li>There is a UEFI Forum consistent of a board of 12 directors, 12 promoters,
+42 contributors, 213 adopters.</li>
+<li>UEFI and ACPI are both now handled by the UEFI Forum.</li>
+<li>A RISC-V UEFI port is taking place using EDKII (EFI Development Kit II) and
+OVMF (Open Virtual Machine Firmware).</li>
+<li>The speakers are giving a very thorough description of the UEFI boot
+mechanism which I&rsquo;m not able to do justice. You&rsquo;re best waiting for the
+slides+video I&rsquo;m afraid.</li>
 </ul>
 
     </section>
