--- a/index.html
+++ b/index.html
@@ -330,6 +330,9 @@ OVMF (Open Virtual Machine Firmware).</li>
 <li>The speakers are giving a very thorough description of the UEFI boot
 mechanism which I&rsquo;m not able to do justice. You&rsquo;re best waiting for the
 slides+video I&rsquo;m afraid.</li>
+<li>The project was started a few months ago, and can now boot to a UEFI shell.</li>
+<li>They have created a new RISC-V QEMU target with some PC peripherals (CMOS,
+PM, PCI and other devices), and also implemented RISC-V machine mode.</li>
 </ul>
 
     </section>
