--- a/index.html
+++ b/index.html
@@ -333,6 +333,8 @@ slides+video I&rsquo;m afraid.</li>
 <li>The project was started a few months ago, and can now boot to a UEFI shell.</li>
 <li>They have created a new RISC-V QEMU target with some PC peripherals (CMOS,
 PM, PCI and other devices), and also implemented RISC-V machine mode.</li>
+<li>Requests for new RISC-V spec additions: a periodic timer CSR, RTC with alarm
+CSR, PI management mode support, &hellip; (sorry, missed some).</li>
 </ul>
 
     </section>
