--- a/index.html
+++ b/index.html
@@ -370,6 +370,19 @@ have a great opportunity to push the software stack forwards.</li>
 <li>What can we achieve by the end of the year? Hopefully upstereamed GNU
 toolchain and QEMU. More mature Clang/LLVM support, upstreamed OS support,
 Debian/RISC-V port, start thinking about Android and a real-time OS.</li>
+<li>How do we get there? We need to recruit more RISC-V developers and make it
+easier for people to get started by producing more docs and specifications.</li>
+<li>Right now, the RISC-V Github has had 48 contributors from a wide range of
+Universities, companies and OSS projects.</li>
+<li>We should present talks and tutorials at developer conferences and local
+user group meetings.</li>
+<li>If you have local patches, upstream them!</li>
+<li>How to attract developers? Could fund developers/projects via the
+Foundation, apply to be a Google Summer of Code mentoring organization, update
+the list of open bugs and future requests on github and track contribution
+statistics.</li>
+<li>We can make it much easier for people to get started by building Debian
+packages, upstreaming, and providing regular binary snapshots.</li>
 </ul>
 
     </section>
