--- a/index.html
+++ b/index.html
@@ -150,6 +150,14 @@ watchdog timer, eNVM 1-poly ROM</li>
 <ul>
 <li>Currently have an RF-mezzanine card for FPGA prototypes, and
 silicon-verified GNSS IP and ASIC development board with a LEON3 CPU inside.</li>
+<li>On the software, have universal receive firmware and plug-and-play support
+for different targets. Plus a host application for data analysis. See
+gnss-snsor.com.</li>
+<li>Now transitioning from the previous 180nm ASIC to a new 90nm chip with a
+RISC-V core. The target frequency is 300MHz.</li>
+<li>The new SoC design aims to take the best ideas of the GPL-licensed grlib
+library (Gaisler Research) and will be written in VHDL.</li>
+<li>Current code can be found <a href="https://github.com/sergeykhbr/riscv_vhdl">here</a>.</li>
 </ul>
 
     </section>
