--- a/index.html
+++ b/index.html
@@ -164,6 +164,17 @@ cacheability etc etc routed in sideband signals accessible via a dedicated
 slave device on a system bus.</li>
 <li>Some memory access optimizations have been implemented to allow access to
 AXI peripherals in one clock cycle.</li>
+<li>Implemented (or implementing?) the multi-core debug protocol, potentially
+supported by Trace32 (Lauterbach).</li>
+</ul>
+
+<h1 id="risc-v-photonic-processor-chen-sun:541250aa31d27f4326ef7f42e9e3ae89">RISC-V photonic processor: Chen Sun</h1>
+
+<ul>
+<li>Process scaling has helped massively for data transfer within a chip, but
+we&rsquo;ve had little improvement for moving data off-chip.</li>
+<li>The I/O wall involves being both power and pin limited. Silicon photonics
+may help overcome this.</li>
 </ul>
 
     </section>
