--- a/index.html
+++ b/index.html
@@ -175,6 +175,15 @@ supported by Trace32 (Lauterbach).</li>
 we&rsquo;ve had little improvement for moving data off-chip.</li>
 <li>The I/O wall involves being both power and pin limited. Silicon photonics
 may help overcome this.</li>
+<li>Started by tring to provide DRAM connected by photonics (as part of the
+DARPA POEM project).</li>
+<li>What about the foundry? Do it without a foundry. How to connect electronics
+and photonics? Put them on the same chip. Where are you going to get a
+processor? RISC-V!</li>
+<li>They produced it and it was published in Nature last month. Dual-core
+1.65GHz RISC-V. Manufactured in a commercial SOI process.</li>
+<li>Build a waveguide with planar silicon processing. Silicon is the high-index
+core. Oxides form the low-index cladding.</li>
 </ul>
 
     </section>
