--- a/index.html
+++ b/index.html
@@ -184,6 +184,13 @@ processor? RISC-V!</li>
 1.65GHz RISC-V. Manufactured in a commercial SOI process.</li>
 <li>Build a waveguide with planar silicon processing. Silicon is the high-index
 core. Oxides form the low-index cladding.</li>
+<li>Transmitter is driven by a CMOS logic inverter. 5Gb/s data rate at 30fj/b.</li>
+<li>Issue with ring resonators is massive variation based on process and
+temperature variation. Need to stabilise this some-how. Add thermal tuning.</li>
+<li>To demonstrate the optical memory system, had a second chip emulating a DRAM
+controller.</li>
+<li>We proposed an architecture, built it, and got performance competitive to
+our predictions!</li>
 </ul>
 
     </section>
