--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@ memory.</li>
 <li>Looked at defining WMM, a new easy-to-specify weak consistency model.</li>
 <li>Propose there should be a new instruction simular to sfence.vm, but going in
 the opposite direction.</li>
+<li>See also <a href="http://csg.csail.mit.edu/riscy-e/">their website</a>.</li>
 </ul>
 
     </section>
