--- a/index.html
+++ b/index.html
@@ -318,6 +318,12 @@ technologies, down to 28nm.</li>
 starting point.</li>
 <li>PULPino is a microcontroller-style platform. No caches, no memory hierarchy,
 no DMA. It re-uses IP from the PULP project and will be taped out in 65nm UMC.</li>
+<li>The boot ROM loads a program from SPI flash.</li>
+<li>Motivated to switch to RISC-V due to more modern design (no set flags, no
+delay slot), compressed instructions, easily extensible.</li>
+<li>Looking to extend RISC-V with non-standard extensions for hardware loops,
+post-increment load+store, multiply-accumulate, ALU extensions (min, max
+absolute value).</li>
 </ul>
 
     </section>
