--- a/index.html
+++ b/index.html
@@ -328,6 +328,11 @@ absolute value).</li>
 It has a 4 stage pipeline.</li>
 <li>Performed a comparison based on published Cortex M4 numbers. RI5CY is a
 little faster and a little smaller.</li>
+<li>The RI5CY core itself is just 7% of the area of a PULPino SoC (assuming
+32KiB instruction and data RAM).</li>
+<li>Open source release will follow shortly, including a FreeRTOS port. Using
+the Solderpad license. Just awaiting final approval from the University
+(expected by the end of the month).</li>
 </ul>
 
     </section>
