--- a/index.html
+++ b/index.html
@@ -333,6 +333,8 @@ little faster and a little smaller.</li>
 <li>Open source release will follow shortly, including a FreeRTOS port. Using
 the Solderpad license. Just awaiting final approval from the University
 (expected by the end of the month).</li>
+<li>Want to port PULPino to IP-XACT. Also want to add floating point support,
+branch prediction, and evaluate further non-standard ISA extensions.</li>
 </ul>
 
     </section>
