--- a/index.html
+++ b/index.html
@@ -387,8 +387,10 @@ seem to be published yet?)</li>
 <li>Bluespec&rsquo;s &lsquo;RISC-V Factory&rsquo; is aimed at organisations who want to create
 their own RISC-V based CPUs or SoCs without the usual learning curve, startup
 costs, and ownership costs.</li>
-<li>Currently working with Draper on the DOVER project we&rsquo;ll be hearing about
-next.</li>
+<li>Currently working with Draper on the DOVER project we&rsquo;ll be hearing about in
+the next talk.</li>
+<li>The Flute RISC-V CPU has interfaces for direct GDB control, an elastic
+(latency-insensitive) pipeline, hooks for optional tagged data.</li>
 </ul>
 
     </section>
