--- a/index.html
+++ b/index.html
@@ -428,6 +428,12 @@ different processes.</li>
 <li>Idiosyncrasies about RISC-V: one instruction uses RS3, sparse opcode space
 increases table size, multiple instructions per machine word (policies want
 tagged instructions)</li>
+<li>Draper plans to make available Bluespec RISC-V and metadata changes, PUMP,
+set of basic micropolicies, runtime support and tools all under open source
+licenses.</li>
+<li>Building a consortium around Dover, an &ldquo;Inherently Secure Processing Hive&rdquo;.</li>
+<li>Question: what is the overhead? Don&rsquo;t have figures yet for RISC-V. From
+previous work, have 10% area overhead and twice the area, 60% energy overhead.</li>
 </ul>
 
     </section>
