update lowrisc intro text

--- a/about/index.html
+++ b/about/index.html
@@ -96,15 +96,15 @@
                     <section>
                         
 
-<p>lowRISC is producing fully open hardware systems. From the processor core
-  to the development board, our goal is to create a completely open computing
-  eco-system.</p>
+<p>lowRISC is creating a fully open-sourced, Linux-capable, RISC-V-based
+  SoC, that can be used either directly or as the basis for a custom design.
+  We aim to tape out our first volume chip this year.</p>
 
 <p>Our open-source SoC (System-on-a-Chip)
   designs will be based on the 64-bit <a href="http://riscv.org/">RISC-V</a> instruction
   set architecture. Volume silicon manufacture is planned
   as is a low-cost development board. There are more details on our plans in
-    <a href="https://speakerdeck.com/asb/lowrisc-the-path-to-an-open-source-soc">these slides from a recent
+    <a href="https://speakerdeck.com/asb/lowrisc-plans-for-risc-v-in-2016">these slides from a recent
     talk</a></p>
 
 <p>lowRISC is a not-for-profit organisation working closely with the University
