--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
             <div class="sixteen columns">
 		<h1>Welcome to the lowRISC project!</h1>
 		<div class="li-intro">
-			<p><b>lowRISC</b> is producing fully open hardware systems. From the processor core
-		    to the development board, our goal is to create a completely open computing
-		    eco-system. <b><a href="http://www.lowrisc.org/about">Find out more</a></b></p>
-		</div>
+      <p><b>lowRISC</b> is creating a fully open-sourced, Linux-capable, RISC-V-based
+      SoC, that can be used either directly or as the basis for a custom design.
+      We aim to tape out our first volume chip this year. <b><a href="http://www.lowrisc.org/about">Find out more</a></b>
+      </p>
+    </div>
 		<div class="li-main-article-list">
 		    <h1>Latest news</h1>
 		    
