fix mailing list link

--- a/community/index.html
+++ b/community/index.html
@@ -112,7 +112,7 @@
 are <a href="http://news.gmane.org/gmane.comp.hardware.lowrisc.devel">here</a> and you
 can <a href="http://listmaster.pepperfish.net/cgi-bin/mailman/listinfo/lowrisc-dev-lists.lowrisc.org">subscribe
 here</a>.<br />
-There&rsquo;s also relevant discussion on the <a href="http://riscv.org/mailinglist.html">RISC-V mailing
+There&rsquo;s also relevant discussion on the <a href="http://riscv.org/mailing-lists/">RISC-V mailing
 lists</a>.</p>
 
 <p>We also have an IRC channel where a number of us as well others interested in
