minor homepage update

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<div class="li-intro">
       <p><b>lowRISC</b> is creating a fully open-sourced, Linux-capable, RISC-V-based
       SoC, that can be used either directly or as the basis for a custom design.
-      We aim to tape out our first volume chip this year. <b><a href="http://www.lowrisc.org/about">Find out more</a></b>
+      We aim to complete our SoC design this year. <b><a href="http://www.lowrisc.org/about">Find out more</a></b>
       </p>
     </div>
 		<div class="li-main-article-list">
