--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         <p>The 2016 Google Summer of Code is now
 <a href="https://developers.google.com/open-source/gsoc/timeline">underway</a> and we&rsquo;re
 delighted to be working with five students, covering a variety of interesting
-projects. They have all introduced themselves over the past few weeks on [our
+projects. They have all introduced themselves over the past few weeks on <a href="https://listmaster.pepperfish.net/cgi-bin/mailman/listinfo/lowrisc-dev-lists.lowrisc.org">our
 project mailing
-list[(<a href="https://listmaster.pepperfish.net/cgi-bin/mailman/listinfo/lowrisc-dev-lists.lowrisc.org">https://listmaster.pepperfish.net/cgi-bin/mailman/listinfo/lowrisc-dev-lists.lowrisc.org</a>).
+list</a>.
 Many thanks to everyone who applied, to the mentors who volunteered, and to
 Google for sponsoring this programme. If your application was unsuccessful, I
 hope you&rsquo;ll try again next year.</p>
