--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ like to do that</li>
 
 <ul>
 <li>Want a standard that is useful in high performance Unix-like systems (fast
-cores, smart devices), low/mid embedded systems (slow cores, dumb debices),
+cores, smart devices), low/mid embedded systems (slow cores, dumb devices),
 and high-performance realtime systems (can&rsquo;t waste time on interrupt overhead)</li>
 <li>Design goals: simplicity, support all kinds of platforms, allow tradeoffs
 between performance and implementation cost, be flexible to support
