small fix to about page

--- a/about/index.html
+++ b/about/index.html
@@ -98,7 +98,7 @@
 
 <p>lowRISC is creating a fully open-sourced, Linux-capable, RISC-V-based
   SoC, that can be used either directly or as the basis for a custom design.
-  We aim to tape out our first volume chip this year.</p>
+  We aim to complete our SoC design this year.</p>
 
 <p>Our open-source SoC (System-on-a-Chip)
   designs will be based on the 64-bit <a href="http://riscv.org/">RISC-V</a> instruction
