link to trace debug code release on about page

--- a/about/index.html
+++ b/about/index.html
@@ -122,8 +122,7 @@
 
 <h3 id="recent-milestones:6083a88ee3411b0d17ce02d738f69d47">Recent milestones</h3>
 
-<p><strong>July 2016</strong>: (Upcoming) New lowRISC code release including support for trace
-debug.</p>
+<p><strong>July 2016</strong>: New lowRISC <a href="http://www.lowrisc.org/docs/debug-v0.3/">code release</a> including support for trace debug.</p>
 
 <p><strong>June 2016</strong>: Presented a brief <a href="http://www2.dac.com/events/eventdetails.aspx?id=200-28">tutorial at
 DAC</a> on prototyping
