--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Our goal is to lower the barrier of entry to producing custom silicon, establish
 <div class="article-container">
   <h4>Fifth RISC-V Workshop: Day One </h4>
   <p>
-  The fifth RISC-V workshop is going on today and tomorrow at the Google&rsquo;s Quad Campus in Mountain View. I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. Alex Bradbury
+  The fifth RISC-V workshop is going on today and tomorrow at the Google&rsquo;s Quad Campus in Mountain View. I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. Introduction: Rick O&rsquo;Connor This workshop is yet again bigger than the last. 350+ attendees, 107 companies, 29 universities. The next workshop will be May 9th-10 in Shanghai, China. Alex Bradbury
   <a href='http://www.lowrisc.org/blog/2016/11/fifth-risc-v-workshop-day-one'>Read More</a>
   </p>
 </div>
