--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Our goal is to lower the barrier of entry to producing custom silicon, establish
 <div class="article-container">
   <h4>Fifth RISC-V Workshop: Day Two </h4>
   <p>
-  Today is the second day of the fifth RISC-V workshop. I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. OpenSoC System Architect: Farzad Fatollahi-Fard
+  Today is the second day of the fifth RISC-V workshop. I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. OpenSoC System Architect: Farzad Fatollahi-Fard Current architectures are wasteful. Only a small fraction of chip area goes to computation.
   <a href='http://www.lowrisc.org/blog/2016/11/fifth-risc-v-workshop-day-two'>Read More</a>
   </p>
 </div>
