add extra link to our github organisation

--- a/about/index.html
+++ b/about/index.html
@@ -101,6 +101,8 @@
     <button type="submit" class="subscribe-button">Submit</button>
   </form></p>
 
+<p>You may also want to browse our <a href="https://github.com/lowrisc">code on GitHub</a>.</p>
+
 <p>If you want to get in touch, please email info@lowrisc.org</p>
 
 <h3 id="recent-milestones:6083a88ee3411b0d17ce02d738f69d47">Recent milestones</h3>
