fix link to mailing list archives

--- a/community/index.html
+++ b/community/index.html
@@ -94,9 +94,10 @@
 <h2 id="mailing-lists-and-irc:f3b3effc19b97b19aaf2ce392427d255">Mailing lists and IRC</h2>
 
 <p>Development discussion takes place on the lowrisc-dev mailing list. Archives
-are <a href="http://news.gmane.org/gmane.comp.hardware.lowrisc.devel">here</a> and you
-can <a href="http://listmaster.pepperfish.net/cgi-bin/mailman/listinfo/lowrisc-dev-lists.lowrisc.org">subscribe
-here</a>.<br />
+are
+<a href="https://listmaster.pepperfish.net/pipermail/lowrisc-dev-lists.lowrisc.org/">here</a>
+and you can <a href="http://listmaster.pepperfish.net/cgi-bin/mailman/listinfo/lowrisc-dev-lists.lowrisc.org">subscribe
+here</a>.
 There&rsquo;s also relevant discussion on the <a href="http://riscv.org/mailing-lists/">RISC-V mailing
 lists</a>.</p>
 
