fix outdated faq question

--- a/faq/index.html
+++ b/faq/index.html
@@ -88,10 +88,9 @@
 
 <h4 id="are-you-hiring:4a1318da06786ac52626178ca960109e">Are you hiring?</h4>
 
-<p>We hope to put out a job advert for a new member of the team at the University
-of Cambridge Computer Laboratory in early 2016. Interested applicants are
-encouraged to make informal enquiries about the post to Rob Mullins
-<a href="mailto:Robert.Mullins@cl.cam.ac.uk">Robert.Mullins@cl.cam.ac.uk</a>.</p>
+<p>Not currently, but we&rsquo;re always interested in talking to people who may be
+interested in joining our efforts. Feel free to email info@lowrisc.org with a
+CV and background.</p>
 
 <h4 id="are-contract-or-remote-working-arrangements-on-offer:4a1318da06786ac52626178ca960109e">Are contract or remote working arrangements on offer?</h4>
 
