--- a/about/index.html
+++ b/about/index.html
@@ -107,6 +107,8 @@
 
 <h3 id="recent-milestones:6083a88ee3411b0d17ce02d738f69d47">Recent milestones</h3>
 
+<p><strong>May 2017</strong>: New lowRISC <a href="http://www.lowrisc.org/docs/minion-v0.4/">code release</a> brings back tagged memory with builtin support in Rocket core and has a minion driven SD.</p>
+
 <p><strong>July 2016</strong>: New lowRISC <a href="http://www.lowrisc.org/docs/debug-v0.3/">code release</a> including support for trace debug.</p>
 
 <p><strong>June 2016</strong>: Presented a brief <a href="http://www2.dac.com/events/eventdetails.aspx?id=200-28">tutorial at
