--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Our goal is to lower the barrier of entry to producing custom silicon, establish
 <div class="article-container">
   <h4>lowRISC 0-4 milestone release </h4>
   <p>
-  The lowRISC 0.4 milestone release is now available. The various changes are best described in our accompanying documentation, but in summary this release: Moves forward our support for tagged memory by re-integrating the tag cache, reducing overhead with a [hierarchical scheme](http://www.lowrisc.org/docs/minion-v0.4/tag_cache/. This will significantly reduce caches misses caused by tagged memory accesses where tags are distributed sparsely. Integrates support for specifying and configuring [tag propagation and exception behaviour](http://www.lowrisc.org/docs/minion-v0.4/tag_core/. A PULPino based &ldquo;minion core&rdquo; has been integrated, and is used to provide peripherals such as the SD card interface, keyboard, and VGA tex display (when using the Nexys4 DDR FPGA development board).
+  The lowRISC 0.4 milestone release is now available. The various changes are best described in our accompanying documentation, but in summary this release: Moves forward our support for tagged memory by re-integrating the tag cache, reducing overhead with a hierarchical scheme. This will significantly reduce caches misses caused by tagged memory accesses where tags are distributed sparsely. Integrates support for specifying and configuring tag propagation and exception behaviour. A PULPino based &ldquo;minion core&rdquo; has been integrated, and is used to provide peripherals such as the SD card interface, keyboard, and VGA tex display (when using the Nexys4 DDR FPGA development board).
   <a href='http://www.lowrisc.org/blog/2017/06/lowrisc-0-4-milestone-release'>Read More</a>
   </p>
 </div>
