add link to job advert

--- a/faq/index.html
+++ b/faq/index.html
@@ -88,9 +88,7 @@
 
 <h4 id="are-you-hiring:4a1318da06786ac52626178ca960109e">Are you hiring?</h4>
 
-<p>Not currently, but we&rsquo;re always interested in talking to people who may be
-interested in joining our efforts. Feel free to email info@lowrisc.org with a
-CV and background.</p>
+<p>Yes! See <a href="http://www.lowrisc.org/jobs/">our jobs page</a>.</p>
 
 <h4 id="are-contract-or-remote-working-arrangements-on-offer:4a1318da06786ac52626178ca960109e">Are contract or remote working arrangements on offer?</h4>
 
