--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Our goal is to lower the barrier of entry to producing custom silicon, establish
 <div class="article-container">
   <h4>Seventh RISC-V Workshop: Day Two </h4>
   <p>
-  The seventh RISC-V workshop is concluding today at Western Digital in Milpitas. I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. Celerity: An Open Source 511-core RISC-V Tiered Accelerator Fabric: Michael Taylor Built in only 9 months. Alex Bradbury
+  The seventh RISC-V workshop is concluding today at Western Digital in Milpitas. I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. Celerity: An Open Source 511-core RISC-V Tiered Accelerator Fabric: Michael Taylor Built in only 9 months. Celerity is an accelerator-centric SoC with a tiered accelertor fabric. Implemented in TSMC 16nm FFC. 25mm2 die area, 385M transistors Why 511 RISC-V cores? 5 Linux-capable RV64G Rocket cores, 496-core RV32IM mesh tiled area &ldquo;manycore&rdquo;, 10-core RV32IM mesh tiled array (low voltage).
   <a href='http://www.lowrisc.org/blog/2017/11/seventh-risc-v-workshop-day-two'>Read More</a>
   </p>
 </div>
