--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Our goal is to lower the barrier of entry to producing custom silicon, establish
 <div class="article-container">
   <h4>Seventh RISC-V Workshop: Day One </h4>
   <p>
-  The seventh RISC-V workshop is going on today and tomorrow at Western Digital in Milpitas. I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. Introduction: Rick O&rsquo;Conor Workshop is sold out, 498 attendees registered representing 138 companies and 35 universities. There will be 47 sessions squeezed into 12 and 24 minute increments, plus 26 poster / demo sessions. The 8th RISC-V workshop will be held on May 7th-10th at the Barcelona Supercomputing Center and Universitat Politecnica de Catalunya.
+  The seventh RISC-V workshop is going on today and tomorrow at Western Digital in Milpitas. I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. Follow here for the day two live blog. Introduction: Rick O&rsquo;Conor Workshop is sold out, 498 attendees registered representing 138 companies and 35 universities. There will be 47 sessions squeezed into 12 and 24 minute increments, plus 26 poster / demo sessions. The 8th RISC-V workshop will be held on May 7th-10th at the Barcelona Supercomputing Center and Universitat Politecnica de Catalunya.
   <a href='http://www.lowrisc.org/blog/2017/11/seventh-risc-v-workshop-day-one'>Read More</a>
   </p>
 </div>
