Add ethernet-v0.5 and diplomacy documentation

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Our goal is to lower the barrier of entry to producing custom silicon, establish
 <div class="article-container">
   <h4>GSoC 2017 student report: core lockstep for minion cores </h4>
   <p>
-  This year, as part of Google Summer of Code we had the pleasure of working with Nikitas Chronas. Alongside his degree studies, Nikitas had become involved with the Libre Space Foundation and developed a strong interest in the possibility of open source hardware in CubeSats. Fault tolerance of some sort is important for harsh environments, and Nikitas worked to add fault tolerance through the implementation of core lockstep for the PULPino-based minion core subsystem.
+  This year, as part of Google Summer of Code we had the pleasure of working with Nikitas Chronas. Alongside his degree studies, Nikitas had become involved with the Libre Space Foundation and developed a strong interest in the possibility of open source hardware in CubeSats. Fault tolerance of some sort is important for harsh environments, and Nikitas worked to add fault tolerance through the implementation of core lockstep) for the PULPino-based minion core subsystem.
   <a href='http://www.lowrisc.org/blog/2017/10/gsoc-2017-student-report-core-lockstep-for-minion-cores'>Read More</a>
   </p>
 </div>
