--- a/faq/index.html
+++ b/faq/index.html
@@ -107,9 +107,7 @@
 
 <h4 id="when-can-i-buy-a-lowrisc-soc:4a1318da06786ac52626178ca960109e">When can I buy a lowRISC SoC?</h4>
 
-<p>As with most tech projects, the most accurate answer is &ldquo;When it&rsquo;s ready&rdquo;.<br />
-  We are expecting to crowdfund an initial instantiation of the lowRISC
-  platform during the course of 2017.</p>
+<p>As with most tech projects, the most accurate answer is &ldquo;When it&rsquo;s ready&rdquo;.</p>
 
 <h4 id="why-risc-v-and-not-openrisc-sparcv8-mips:4a1318da06786ac52626178ca960109e">Why RISC-V and not OpenRISC/SPARCv8/MIPS/&hellip;?</h4>
 
