--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Our goal is to lower the barrier of entry to producing custom silicon, establish
 <div class="article-container">
   <h4>Barcelona RISC-V Workshop: Day One </h4>
   <p>
-  The eighth RISC-V workshop is going on today Barcleona. As usual, I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. Introduction: Rick O&rsquo;Conner This workshop has 325 attendees representing 101 companies and 25 universties. Largest outside of Silicon Valley. Rick gives the usual overview of the RISC-V Foundation structure. The RISC-V Foundation currently has over 150 members, including invidual members. These members are distributed across 25 countries around the world.
+  The eighth RISC-V workshop is going on today Barcleona. As usual, I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. Introduction: Rick O&rsquo;Connor This workshop has 325 attendees representing 101 companies and 25 universties. Largest outside of Silicon Valley. Rick gives the usual overview of the RISC-V Foundation structure. The RISC-V Foundation currently has over 150 members, including invidual members. These members are distributed across 25 countries around the world.
   <a href='http://www.lowrisc.org/blog/2018/05/barcelona-risc-v-workshop-day-one'>Read More</a>
   </p>
 </div>
